--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,17 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -18,13 +29,24 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.hack.sherhackathon.HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:name="com.hack.sherhackathon.MapActivity"
+            android:label="@string/title_activity_map" >
         </activity>
+        <activity
+            android:name="com.hack.sherhackathon.FrontActivity"
+            android:label="@string/title_activity_front" >
+        </activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC2ul_dcuebRsDhTs4GaZr-pvJ-KGvVK68" />
     </application>
 
 </manifest>
