Made fixes to the map

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,12 +41,18 @@
             android:name="com.hack.sherhackathon.FrontActivity"
             android:label="@string/title_activity_front" >
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyC2ul_dcuebRsDhTs4GaZr-pvJ-KGvVK68" />
+
+        <activity
+            android:name="com.hack.sherhackathon.InfoActivity"
+            android:label="@string/title_activity_info" >
+        </activity>
     </application>
 
 </manifest>
