--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -53,6 +53,30 @@
             android:name="com.hack.sherhackathon.InfoActivity"
             android:label="@string/title_activity_info" >
         </activity>
+        <activity
+            android:name="com.hack.sherhackathon.HockeyActivity"
+            android:label="@string/title_activity_hockey" >
+        </activity>
+        <activity
+            android:name="com.hack.sherhackathon.InfoHockeyActivity"
+            android:label="@string/title_activity_info_hockey" >
+        </activity>
+        <activity
+            android:name="com.hack.sherhackathon.ParkActivity"
+            android:label="@string/title_activity_park" >
+        </activity>
+        <activity
+            android:name="com.hack.sherhackathon.InfoParkActivity"
+            android:label="@string/title_activity_info_park" >
+        </activity>
+        <activity
+            android:name="com.hack.sherhackathon.ParkInfoActivity"
+            android:label="@string/title_activity_park_info" >
+        </activity>
+        <activity
+            android:name="com.hack.sherhackathon.BikeActivity"
+            android:label="@string/title_activity_bike" >
+        </activity>
     </application>
 
 </manifest>
